fix for displaying menu within the visible viewport

--- a/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.OG-analytics-form.css
+++ b/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.OG-analytics-form.css
@@ -226,6 +226,7 @@
 .OG-analytics-form .og-optional .og-aggregation,
 .OG-analytics-form .og-optional .og-filters {
     display: inline-block;
+    position: relative;
 }
 
 .OG-analytics-form .og-optional .og-icon-Temporal,
